[gd_scene load_steps=14 format=2]

[ext_resource path="res://effects/vignette.shader" type="Shader" id=1]
[ext_resource path="res://effects/vignette.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/homeBtn.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/space_marine/SM.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/ui/settings.gd" type="Script" id=5]
[ext_resource path="res://fonts/rubik_36.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/rubik_32.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/Rubik-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/vignette = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 42
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.321569, 0.364706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -369.0
margin_right = 369.0
margin_bottom = 152.0
rect_scale = Vector2( 1, 1.5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "SETTINGS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -477.0
margin_top = -328.0
margin_right = 481.0
margin_bottom = 423.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SOUND" type="Label" parent="SettingsContainer"]
margin_right = 958.0
margin_bottom = 51.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 5 )
text = "SOUND"
align = 1

[node name="VSeparator" type="VSeparator" parent="SettingsContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 55.0
margin_right = 958.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeContainer" type="VBoxContainer" parent="SettingsContainer"]
margin_top = 79.0
margin_right = 958.0
margin_bottom = 254.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneralContainer" type="HBoxContainer" parent="SettingsContainer/VolumeContainer"]
margin_right = 958.0
margin_bottom = 43.0

[node name="Label" type="Label" parent="SettingsContainer/VolumeContainer/GeneralContainer"]
margin_right = 200.0
margin_bottom = 43.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 6 )
text = "General"

[node name="GeneralSlider" type="HSlider" parent="SettingsContainer/VolumeContainer/GeneralContainer"]
margin_left = 204.0
margin_right = 814.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="SettingsContainer/VolumeContainer/GeneralContainer"]
margin_left = 818.0
margin_top = 2.0
margin_right = 878.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 7 )
text = "100"

[node name="GeneralToggle" type="CheckButton" parent="SettingsContainer/VolumeContainer/GeneralContainer"]
margin_left = 882.0
margin_right = 958.0
margin_bottom = 43.0
pressed = true
align = 1

[node name="VSeparator" type="VSeparator" parent="SettingsContainer/VolumeContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 47.0
margin_right = 958.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 15 )

[node name="MusicContainer" type="HBoxContainer" parent="SettingsContainer/VolumeContainer"]
margin_top = 66.0
margin_right = 958.0
margin_bottom = 109.0

[node name="Label" type="Label" parent="SettingsContainer/VolumeContainer/MusicContainer"]
margin_right = 200.0
margin_bottom = 43.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 6 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="SettingsContainer/VolumeContainer/MusicContainer"]
margin_left = 204.0
margin_right = 814.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="SettingsContainer/VolumeContainer/MusicContainer"]
margin_left = 818.0
margin_top = 2.0
margin_right = 878.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 7 )
text = "100"

[node name="MusicToggle" type="CheckButton" parent="SettingsContainer/VolumeContainer/MusicContainer"]
margin_left = 882.0
margin_right = 958.0
margin_bottom = 43.0
pressed = true
align = 1

[node name="VSeparator2" type="VSeparator" parent="SettingsContainer/VolumeContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 113.0
margin_right = 958.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 15 )

[node name="EffectContainer" type="HBoxContainer" parent="SettingsContainer/VolumeContainer"]
margin_top = 132.0
margin_right = 958.0
margin_bottom = 175.0

[node name="Label" type="Label" parent="SettingsContainer/VolumeContainer/EffectContainer"]
margin_right = 200.0
margin_bottom = 43.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 6 )
text = "Effect"

[node name="EffectSlider" type="HSlider" parent="SettingsContainer/VolumeContainer/EffectContainer"]
margin_left = 204.0
margin_right = 814.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="SettingsContainer/VolumeContainer/EffectContainer"]
margin_left = 818.0
margin_top = 2.0
margin_right = 878.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 7 )
text = "100"

[node name="EffectToggle" type="CheckButton" parent="SettingsContainer/VolumeContainer/EffectContainer"]
margin_left = 882.0
margin_right = 958.0
margin_bottom = 43.0
pressed = true
align = 1

[node name="VSeparator2" type="VSeparator" parent="SettingsContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 258.0
margin_right = 958.0
margin_bottom = 298.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DISPLAY" type="Label" parent="SettingsContainer"]
margin_top = 302.0
margin_right = 958.0
margin_bottom = 353.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 5 )
text = "DISPLAY"
align = 1

[node name="VSeparator3" type="VSeparator" parent="SettingsContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 357.0
margin_right = 958.0
margin_bottom = 377.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayContainer" type="VBoxContainer" parent="SettingsContainer"]
margin_top = 381.0
margin_right = 958.0
margin_bottom = 641.0
alignment = 2

[node name="ResolutionContainer" type="HBoxContainer" parent="SettingsContainer/DisplayContainer"]
margin_right = 958.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="SettingsContainer/DisplayContainer/ResolutionContainer"]
margin_right = 200.0
margin_bottom = 43.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 6 )
text = "Resolution"

[node name="ResolutionOptions" type="OptionButton" parent="SettingsContainer/DisplayContainer/ResolutionContainer"]
margin_left = 204.0
margin_right = 958.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )

[node name="VSeparator" type="VSeparator" parent="SettingsContainer/DisplayContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 48.0
margin_right = 958.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 15 )

[node name="WindowTypeContainer" type="HBoxContainer" parent="SettingsContainer/DisplayContainer"]
margin_top = 67.0
margin_right = 958.0
margin_bottom = 111.0

[node name="Label" type="Label" parent="SettingsContainer/DisplayContainer/WindowTypeContainer"]
margin_right = 200.0
margin_bottom = 43.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 6 )
text = "Window"

[node name="WindowTypeOptions" type="OptionButton" parent="SettingsContainer/DisplayContainer/WindowTypeContainer"]
margin_left = 204.0
margin_right = 958.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )

[node name="VSeparator2" type="VSeparator" parent="SettingsContainer/DisplayContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 115.0
margin_right = 958.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 15 )

[node name="VSyncContainer" type="HBoxContainer" parent="SettingsContainer/DisplayContainer"]
margin_top = 134.0
margin_right = 958.0
margin_bottom = 177.0

[node name="Label" type="Label" parent="SettingsContainer/DisplayContainer/VSyncContainer"]
margin_right = 200.0
margin_bottom = 43.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 6 )
text = "VSync"

[node name="VSeparator" type="VSeparator" parent="SettingsContainer/DisplayContainer/VSyncContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 204.0
margin_right = 878.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3

[node name="VSyncToggle" type="CheckButton" parent="SettingsContainer/DisplayContainer/VSyncContainer"]
margin_left = 882.0
margin_right = 958.0
margin_bottom = 43.0

[node name="VSeparator3" type="VSeparator" parent="SettingsContainer/DisplayContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 181.0
margin_right = 958.0
margin_bottom = 196.0
rect_min_size = Vector2( 0, 15 )

[node name="ApplyBtn" type="Button" parent="SettingsContainer/DisplayContainer"]
margin_left = 833.0
margin_top = 200.0
margin_right = 958.0
margin_bottom = 260.0
rect_min_size = Vector2( 125, 60 )
size_flags_horizontal = 8
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 6 )
text = "APPLY"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeBtn" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 805.0
margin_right = 1115.0
[connection signal="value_changed" from="SettingsContainer/VolumeContainer/GeneralContainer/GeneralSlider" to="." method="_on_GeneralSlider_value_changed"]
[connection signal="toggled" from="SettingsContainer/VolumeContainer/GeneralContainer/GeneralToggle" to="." method="_on_GeneralToggle_toggled"]
[connection signal="value_changed" from="SettingsContainer/VolumeContainer/MusicContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="toggled" from="SettingsContainer/VolumeContainer/MusicContainer/MusicToggle" to="." method="_on_MusicToggle_toggled"]
[connection signal="value_changed" from="SettingsContainer/VolumeContainer/EffectContainer/EffectSlider" to="." method="_on_EffectSlider_value_changed"]
[connection signal="toggled" from="SettingsContainer/VolumeContainer/EffectContainer/EffectToggle" to="." method="_on_EffectToggle_toggled"]
[connection signal="item_selected" from="SettingsContainer/DisplayContainer/ResolutionContainer/ResolutionOptions" to="." method="_on_ResolutionOptions_item_selected"]
[connection signal="item_selected" from="SettingsContainer/DisplayContainer/WindowTypeContainer/WindowTypeOptions" to="." method="_on_WindowTypeOptions_item_selected"]
[connection signal="toggled" from="SettingsContainer/DisplayContainer/VSyncContainer/VSyncToggle" to="." method="_on_VSyncToggle_toggled"]
[connection signal="pressed" from="HBoxContainer/HomeBtn" to="." method="_on_HomeBtn_pressed"]
